--- a/src/assets/style/_footer.scss
+++ b/src/assets/style/_footer.scss
@@ -3,7 +3,7 @@ footer.sticky-footer {
   position: absolute;
   right: 0;
   bottom: 0;
-  width: calc(100% - #{$sidebar-collapsed-width});
+  width: 100%;
   height: $sticky-footer-height;
   background-color: $gray-200;
   .copyright {
@@ -11,7 +11,7 @@ footer.sticky-footer {
     font-size: 0.8rem;
   }
   @media (min-width: 768px) {
-    width: calc(100% - #{$sidebar-base-width});
+    width: 100%;
   }
 }
 
@@ -21,7 +21,7 @@ body.sidebar-toggled {
   }
   @media (min-width: 768px) {
     footer.sticky-footer {
-      width: calc(100% - #{$sidebar-collapsed-width});
+      width: 100%;
     }
   }
 }
